# PJPDF

./: TODO.md  build_log.txt  build_log_v2.txt  cleanup_verify.txt  final_save_sidebar_check.txt  final_ui_fix_check.txt  final_verify.txt  fix_save_check.txt  global_fix_verify.txt  index.html  merge_fix_verify.txt  merge_split_ux_check.txt  multitab_final_build.txt  multitab_fix_check.txt  multitab_fix_check_2.txt  ocr_optimize_check.txt  optimization_final_check.txt  package-lock.json  package.json  phase14_verify.txt  phase15_verify.txt  phase15_verify_retry.txt  phase16_verify.txt  reorder_verify.txt  tauri_dev_log.txt  tauri_icon_log.txt  thumb_sync_check.txt
src/: App.css  App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  cargo_final_check.txt  cargo_verify.txt  check_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pdf/: mod.rs
src/components/: Header.tsx  MergeModal.tsx  PDFViewport.tsx  PrintModal.tsx  PropertyPanel.tsx  ReflowOverlay.tsx  Sidebar.tsx  SplitModal.tsx  TabBar.tsx  Toast.tsx  Toolbar.tsx
