[package]
name = "pjpdf"
version = "0.1.0"
description = "PJPDF - High Performance PDF Editor"
authors = ["Antigravity"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pjpdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdfium-render = { version = "0.8", features = ["image", "thread_safe", "sync"] }
image = "0.25"
anyhow = "1"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
once_cell = "1"
chrono = "0.4"
# tesseract = "0.14"
base64 = "0.22"
ocrs = "0.7"
rten = "0.9"
rten-imageproc = "0.9"
tauri-plugin-single-instance = "2.4.0"
# let ocrs bring its own dependencies

